# anime_parser

./: main.py  pyproject.toml
