[tool.poetry]
name = "anime-parse"
version = "0.1.0"
description = ""
authors = ["AmaneTsu <63858627+AmaneTsukasa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anime_parse"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
